@@ -19,6 +19,7 @@ namespace ndhist {
 namespace stats {
 
 void register_mean();
+void register_moment();
 
 }// namespace stats
 
@@ -29,6 +30,7 @@ void register_stats_module()
         bp::scope stats_module_scope(stats_module);
 
         stats::register_mean();
+        stats::register_moment();
     }
 }
 
